--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -45,11 +45,16 @@ pluralRule=1
 
 # LOCALIZATION NOTE (plural.Total_Firebugs2): Semicolon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-# Used in a tooltip that is displayed for the Firebug icon located within Firefox status bar.
+# Used in a tooltip that is displayed for the Firebug icon located within Firefox toolbar.
 # Displays the number of pages with Firebug activated.
 # %1 = number of Firebug instances activated
 # example: 2 Total Firebugs
 plural.Total_Firebugs2=%1$S Total Firebug;%1$S Total Firebugs
+
+# LOCALIZATION NOTE (startbutton.tip.deactivated):
+# Used in a tooltip that is displayed for the Firebug icon located within Firefox toolbar.
+# Displays the deactivated status of Firebug
+startbutton.tip.deactivated=Deactivated
 
 # LOCALIZATION NOTE (panel.status): Label showing the status of an activable panel
 # inside a tooltip when hovering the Start Button. Will be shown for each panel.
